[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/PlayerUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Pickaxe.png" type="Texture" id=4]
[ext_resource path="res://Sprites/PlayerArm.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=2]
radius = 31.9997

[sub_resource type="CircleShape2D" id=1]
radius = 25.7099

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="LeftArm" type="Sprite" parent="."]
position = Vector2( 0, -80 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="ItemArea" type="Area2D" parent="."]
position = Vector2( -2.12176e-06, 0 )
rotation = 1.5708

[node name="ItemSprite" type="Sprite" parent="ItemArea"]
position = Vector2( 108, -27 )
texture = ExtResource( 4 )

[node name="RightArm" type="Sprite" parent="ItemArea"]
position = Vector2( 80, -7.62939e-06 )
texture = ExtResource( 5 )

[node name="Area" type="CollisionShape2D" parent="ItemArea"]
position = Vector2( 108, -23 )
rotation = 0.785398
shape = SubResource( 2 )

[node name="SwingTimer" type="Timer" parent="ItemArea"]
one_shot = true

[node name="SwingAnimation" type="Tween" parent="ItemArea"]

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerUI" parent="." instance=ExtResource( 3 )]

[node name="Camera" type="Camera2D" parent="."]
scale = Vector2( 3.76687, 6.81747 )
current = true

[connection signal="tween_completed" from="ItemArea/SwingAnimation" to="." method="_on_SwingAnimation_tween_completed"]
